hard-gists/b19bb35f5484af5d7622/run.log
=== Docker Run Log for b19bb35f5484af5d7622 ===
Started at: Mi 29. Okt 19:24:16 CET 2025

[2025-10-29 19:24:17] START: Running container for b19bb35f5484af5d7622
[2025-10-29 19:24:17] SUCCESS: Container 2abe17d832272a79cbf7a2839f9ef550ecf4a8f0c13c170cd800c89bde3ba87e started for b19bb35f5484af5d7622
=== Container logs for b19bb35f5484af5d7622 ===
  File "/snippet.py", line 28
    print 'Closed PanelTest'
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b19bb35f5484af5d7622 ===
[2025-10-29 19:24:19] INFO: Container 2abe17d832272a79cbf7a2839f9ef550ecf4a8f0c13c170cd800c89bde3ba87e has stopped
